<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_acomodation"
        android:layout_width="match_parent"
        android:hint="@string/acomodation"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/edit_tickets"
        android:layout_width="match_parent"
        android:hint="@string/tickets"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/edit_transport"
        android:layout_width="match_parent"
        android:hint="@string/transport"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>



    <EditText
        android:id="@+id/edit_alimentation"
        android:layout_width="match_parent"
        android:hint="@string/alimentation"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/edit_atractions"
        android:layout_width="match_parent"
        android:hint="@string/atractions"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>


    <EditText
        android:id="@+id/edit_extra_expenses"
        android:layout_width="match_parent"
        android:hint="@string/extra_expenses"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"/>


    <TextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:hint="@string/total_spend_travel"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:textAllCaps="true"
        android:textSize="38sp"
        android:hint="@string/total_value"
        android:textColorHint="@color/teal_700"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:backgroundTint="@color/teal_700"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:textColorHint="@color/white"
        android:hint="@string/calculate"/>

</LinearLayout>